[tool.poetry]
name = "klipper-led-effect"
version = "0.1.0"
description = ""
authors = ["William Kerrigan <deadleg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.4.5"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
